--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,3 +1,37 @@
-<p>login works!</p>
+<body>
+<mat-card class="contenedor-login">
+    <mat-card-header class="text-center">
+      <mat-card-title class="h4 font-weight-bold">
+        Iniciar Sesión
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content class="p-4">
+      <form [formGroup]="loginForm">
+        <div class="mb-3">
+          <mat-form-field class="w-100">
+            <mat-label>Email</mat-label>
+            <input formControlName="email" matInput />
+          </mat-form-field>
+        </div>
+  
+        <div class="mb-4">
+          <mat-form-field class="w-100">
+            <mat-label>Contraseña</mat-label>
+            <input type="password" formControlName="password" matInput/>
+          </mat-form-field>
+        </div>
+        <button
+          (click)="onSubmit()"
+          type="submit"
+          routerLink="/dashboard/home"
+          mat-flat-button
+          class=" w-100 py-2 font-weight-bold"
+        >
+          Iniciar Sesión
+        </button>
+      </form>
+    </mat-card-content>
+  </mat-card>
+  
 
-<button routerLink="/dashboard/home" mat-button > Iniciar Sesión</button>
+</body>
