--- a/src/app/modules/dashboard/pages/courses/components/courses-table/courses-table.component.html
+++ b/src/app/modules/dashboard/pages/courses/components/courses-table/courses-table.component.html
@@ -14,17 +14,17 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef> Acciones </th>
       <td mat-cell *matCellDef="let element">
-        <button (click)="delete.emit(element.id)" mat-icon-button>
+        <button [disabled]="!(isAdmin$ | async)" (click)="delete.emit(element.id)" mat-icon-button>
             <mat-icon>
                 delete
             </mat-icon>
         </button>
-        <button (click)="edit.emit(element)" mat-icon-button>
+        <button [disabled]="!(isAdmin$ | async)" (click)="edit.emit(element)" mat-icon-button>
             <mat-icon>
                 edit
             </mat-icon>
         </button>
-        <button mat-icon-button>
+        <button routerLink="{{element.id}}" mat-icon-button>
             <mat-icon>
                 visibility
             </mat-icon>
