--- a/src/app/modules/dashboard/pages/students/components/student-dialog-form/student-dialog-form.component.html
+++ b/src/app/modules/dashboard/pages/students/components/student-dialog-form/student-dialog-form.component.html
@@ -15,6 +15,18 @@
           <input formControlName="lastName" matInput />
         </mat-form-field>
       </div>
+      <div class="col-6">
+        <mat-form-field class="w-full">
+          <mat-label>Edad</mat-label>
+          <input type="number" formControlName="age" matInput />
+        </mat-form-field>
+      </div>
+      <div class="col-6">
+        <mat-form-field class="w-full">
+          <mat-label>Mail</mat-label>
+          <input type="email" formControlName="mail" matInput />
+        </mat-form-field>
+      </div>
     </div>
   </form>
 </div>
