--- a/src/app/modules/dashboard/pages/students/students.component.html
+++ b/src/app/modules/dashboard/pages/students/students.component.html
@@ -1,51 +1,9 @@
+<h2 class="text-center">Estudiantes</h2>
+@if (isLoading) {
+  <mat-spinner />
+} @else {
+  <button (click)="openFormDialog()" mat-flat-button [disabled]="!(isAdmin$ | async)">Crear Estudiante</button>
+  <app-students-table [dataSource]="students" (delete)="onDelete($event)" (edit)="openFormDialog($event)"></app-students-table>
 
-
-<div *ngIf="isLoading; else content">
-  <mat-spinner></mat-spinner>
-</div>
-
-<ng-template #content>
-  <div *ngIf="hasError; else studentContent">
-    <p class="error-message">Ocurrió un error, por favor intente de nuevo</p>
-  </div>
-
-  <ng-template #studentContent>
-    <div class="student-header">
-      <h1 class="text-center">Estudiantes</h1>
-      <button mat-raised-button (click)="onCreateStudent()">Crear Estudiante</button>
-    </div>
-
-    <table mat-table [dataSource]="students" class="mat-elevation-z8 student-table">
-      <!--- Columna Id -->
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>Id</th>
-        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-      </ng-container>
-
-      <!-- Columna Nombre -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Nombre</th>
-        <td mat-cell *matCellDef="let element">{{ element | fullName }}</td>
-      </ng-container>
-
-      <!-- Columna Acciones -->
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Acciones</th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-icon-button [routerLink]="element.id" [queryParams]="{ name: element.name, lastName: element.lastName }">
-            <mat-icon>visibility</mat-icon>
-          </button>
-          <button mat-icon-button (click)="onDelete(element.id)">
-            <mat-icon>delete</mat-icon>
-          </button>
-          <button mat-icon-button (click)="onEdit(element)">
-            <mat-icon>edit</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-  </ng-template>
+}
 
