--- a/src/app/modules/dashboard/pages/users/users.component.html
+++ b/src/app/modules/dashboard/pages/users/users.component.html
@@ -1,1 +1,5 @@
-<p>users works!</p>
+<h2 class="text-center">Usuarios</h2>
+<button (click)="openFormDialog()" mat-flat-button [disabled]="!(isAdmin$ | async)">
+    Crear Usuario
+</button>
+<app-users-table [dataSource]="users" (delete)="onDelete($event)" (edit)="openFormDialog($event)"></app-users-table>
